dati-semantic-lodview/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: dati-semantic-lodview
  namespace: ndc-test
  labels:
    application: dati-semantic-lodview
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: dati-semantic-lodview
  template:
    metadata:
      name: dati-semantic-lodview
      creationTimestamp: null
      labels:
        application: dati-semantic-lodview
        deploymentConfig: dati-semantic-lodview
    spec:
      containers:
        - resources:
            limits:
              cpu: 800m
              memory: 2048Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe: # FIXME
            httpGet:
              path: /onto/CPV
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 300
          livenessProbe: # FIXME
            httpGet:
              path: /onto/CPV
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 300
          terminationMessagePath: /dev/termination-log
          name: dati-semantic-lodview
          ports: # FIXME
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: >-
            ghcr.io/teamdigitale/dati-semantic-lodview:20221121-42-053c762
          env: # FIXME with correct URLs, URI SPACE and PUBLIC URL.
            - name: LodViewhttpRedirectSuffix
              value: ""
            - name: "LodViewendpoint"
              value: http://virtuoso-test-external-service:8891/sparql
            - name: MATOMO_SITE_ID
              value: "35"
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
