dati-semantic-lodview/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-lodview
  namespace: ndc-prod
  labels:
    application: dati-semantic-lodview
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
spec:
  # TODO: consider publishing this application
  #       on a separate domain, e.g. lod-ndc-dev...
  host: ndc-prod.apps.cloudpub.istat.it
  path: "/lodview"
  to:
    kind: Service
    name: dati-semantic-lodview
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
